fix spacing below header

--- a/election-web.css
+++ b/election-web.css
@@ -38,7 +38,7 @@ path#progbar { stroke: none; fill: lightblue; }
     #legend { position:absolute; left: 410px; top: 0; }
 }
 #piechart, #regstuff { padding-top: 10px; }
-div.header { padding-bottom: 8px; }
+div.header { padding-bottom: 1em; }
 svg { overflow: hidden; }
 
 /* Text formatting */
@@ -68,7 +68,7 @@ table.regstats { font-size:85%; margin: 0 auto; }
 table.regstats tr :first-child { padding-right: 1em; }
 
 table.votes { margin: 0 auto; }
-table.votes { padding-top:1em; font-size:85%; border-spacing: 0; }
+table.votes { font-size:85%; border-spacing: 0; }
 table.votes th { text-align: left; white-space: nowrap; }
 table.votes td, table.votes th { padding-right: 1em; border-top: 1px solid gray; padding-top: 2px; padding-bottom: 2px; height: 22px; }
 table.votes tr :first-child { padding-left: 2px; }
